--- a/home.html
+++ b/home.html
@@ -10,6 +10,12 @@
 
 <body>
 
+
+<!-- beginning of page-wrapper -->
+
+  <div class="page-wrapper">
+
+
     <div>
     
         <ul class="nav">
@@ -170,6 +176,72 @@
 </div>
 
 
+</div> 
+<!-- end of page page-wrapper -->
+
+
+
+
+<footer>
+
+<div class="footer">
+<div class="footer-content">
+
+<div class="footer-section about">
+
+  <img src="logo.jpg" class="logo-image"/>
+
+  <p> this is the description of this website. Pay attention!!!
+    this is the description of this website. Pay attention!!!
+    this is the description of this website. Pay attention!!!
+  </p>
+  
+  <div class="contact">
+    <span><i class="fas fa-phone"></i> &nbsp; +237 677227775</span>
+    <span><i class="fas fa-envelope"></i> &nbsp; garbadickson@gmail.com</span>
+  </div>
+
+  <div class="socials">
+    <a href="#"><i class="fab fa-facebook"></i></a>
+    <a href="#"><i class="fab fa-instagram"></i></a>
+    <a href="#"><i class="fab fa-twitter"></i></a>
+    <a href="#"><i class="fab fa-youtube"></i></a>
+  </div>
+
+</div>
+
+<div class="footer-section links">
+  <h2>Quick Links</h2>
+  <br>
+  <ul>
+    <a href="#"><li>Profile</li></a>
+    <a href="#"><li>Calculator</li></a>
+    <a href="#"><li>Table</li></a>
+    <a href="#"><li>Gallery</li></a>
+    <a href="#"><li>Contact</li></a>
+  </ul>
+</div>
+
+<div class="footer-section contact-form">
+  <h2>Contact Us</h2>
+  <br>
+  <form action="home.html" method="post">
+    <input type="email" name="email" class="text-input contact-input" placeholder="Your Email Address...">
+    <textarea name="message" class="text-input contact-input" placeholder="Your Message..."></textarea>
+    <button type="submit" class="btn btn-big">
+    <i class="fas fa-envelope"></i>
+    Send</button>
+    
+  </form>
+</div>
+
+<div class="footer-bottom">
+&copy; webdev.com | Designed by Garba Dickson
+</div>
+
+</div>
+</div>
+</footer>
 
 </body>
 </html>
