hosting first website

--- a/profile.html
+++ b/profile.html
@@ -85,15 +85,15 @@
   </p>
   
   <div class="contact">
-    <span><i class="fas fa-phone"></i> &nbsp; +237 677227775</span>
-    <span><i class="fas fa-envelope"></i> &nbsp; garbadickson@gmail.com</span>
+    <span><i class="fa fa-phone"></i> &nbsp; +237 677227775</span>
+    <span><i class="fa fa-envelope"></i> &nbsp; garbadickson@gmail.com</span>
   </div>
 
   <div class="socials">
-    <a href="#"><i class="fab fa-facebook"></i></a>
-    <a href="#"><i class="fab fa-instagram"></i></a>
-    <a href="#"><i class="fab fa-twitter"></i></a>
-    <a href="#"><i class="fab fa-youtube"></i></a>
+    <a href="#"><i class="fa fa-facebook"></i></a>
+    <a href="#"><i class="fa fa-instagram"></i></a>
+    <a href="#"><i class="fa fa-twitter"></i></a>
+    <a href="#"><i class="fa fa-youtube"></i></a>
   </div>
 
 </div>
@@ -117,7 +117,7 @@
     <input type="email" name="email" class="text-input contact-input" placeholder="Your Email Address...">
     <textarea name="message" class="text-input contact-input" placeholder="Your Message..."></textarea>
     <button type="submit" class="btn btn-big">
-    <i class="fas fa-envelope"></i>
+    <i class="fa fa-envelope"></i>
     Send</button>
     
   </form>
