--- a/home.html
+++ b/home.html
@@ -5,6 +5,8 @@
 <head
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
 </head>
 
 
@@ -195,17 +197,17 @@
     this is the description of this website. Pay attention!!!
     this is the description of this website. Pay attention!!!
   </p>
-  
+
   <div class="contact">
-    <span><i class="fas fa-phone"></i> &nbsp; +237 677227775</span>
-    <span><i class="fas fa-envelope"></i> &nbsp; garbadickson@gmail.com</span>
+    <span><i class="fa fa-phone"></i> &nbsp; +237 677227775</span>
+    <span><i class="fa fa-envelope"></i> &nbsp; garbadickson@gmail.com</span>
   </div>
 
   <div class="socials">
-    <a href="#"><i class="fab fa-facebook"></i></a>
-    <a href="#"><i class="fab fa-instagram"></i></a>
-    <a href="#"><i class="fab fa-twitter"></i></a>
-    <a href="#"><i class="fab fa-youtube"></i></a>
+    <a href="#"><i class="fa fa-facebook"></i></a>
+    <a href="#"><i class="fa fa-instagram"></i></a>
+    <a href="#"><i class="fa fa-twitter"></i></a>
+    <a href="#"><i class="fa fa-youtube"></i></a>
   </div>
 
 </div>
@@ -229,7 +231,7 @@
     <input type="email" name="email" class="text-input contact-input" placeholder="Your Email Address...">
     <textarea name="message" class="text-input contact-input" placeholder="Your Message..."></textarea>
     <button type="submit" class="btn btn-big">
-    <i class="fas fa-envelope"></i>
+    <i class="fa fa-envelope"></i>
     Send</button>
     
   </form>
