Update on footer content

--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
     <span><i class="fa fa-phone"></i> &nbsp; +237 677227775</span>
     <span><i class="fa fa-envelope"></i> &nbsp; garbadickson@gmail.com</span>
   </div>
-
+<br>
   <div class="socials">
     <a href="#"><i class="fa fa-facebook"></i></a>
     <a href="#"><i class="fa fa-instagram"></i></a>
@@ -230,7 +230,7 @@
   <form action="home.html" method="post">
     <input type="email" name="email" class="text-input contact-input" placeholder="Your Email Address...">
     <textarea name="message" class="text-input contact-input" placeholder="Your Message..."></textarea>
-    <button type="submit" class="btn btn-big">
+    <button type="submit" class="btn btn-big contact-btn">
     <i class="fa fa-envelope"></i>
     Send</button>
     
