--- a/calculator.html
+++ b/calculator.html
@@ -6,6 +6,8 @@
     <meta charset="utf-8">
 
     <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="calc.css">
+
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
@@ -47,45 +49,53 @@
 <br>
 
 <!-- Beginning of main content  -->
-<h2 class="calc">HTML Calculator</h2>
-<div class="calc-box">  
+<div class="container">
 
-  <div class="display"><input type="text" readonly size="18" id="d"></div>  
-  <div class="keys">  
-         <p><input type="button" class="button gray" value="mrc" onclick='c("Created....................")'>
-          <input type="button" class="button gray" value="m-" onclick='c("...............by............")'>
-          <input type="button" class="button gray"  
-                 value="m+" onclick='c(".....................Anoop")'>
-          <input type="button" class="button pink" value="/" onclick='v("/")'>
-         </p>  
+  <div class="calc-body">
 
-         <p><input type="button" class="button black" value="7" onclick='v("7")'>
-          <input type="button" class="button black" value="8" onclick='v("8")'>
-          <input type="button" class="button black" value="9" onclick='v("9")'>
-          <input type="button" class="button pink" value="*" onclick='v("*")'>
-        </p>  
+    <div class="calc-screen">
 
-        <p><input type="button" class="button black" value="4" onclick='v("4")'>
-          <input type="button" class="button black" value="5" onclick='v("5")'>
-          <input type="button" class="button black" value="6" onclick='v("6")'>
-          <input type="button" class="button pink" value="-" onclick='v("-")'>
-        </p>  
+      <div class="calc-operation">Web Calculator</div>
+    <div class="calc-display"><input type="text" readonly size="18" id="d"></div>
+  </div>
 
-         <p><input type="button" class="button black" value="1" onclick='v("1")'>
-          <input type="button" class="button black" value="2" onclick='v("2")'>
-          <input type="button" class="button black" value="3" onclick='v("3")'>
-          <input type="button" class="button pink" value="+" onclick='v("+")'>
-        </p>  
+    <div class="calc-button-row">
+      <div class="button c">C</div>
+      <div class="button l">≠</div>
+      <div class="button l">%</div>
+      <div class="button l">/</div>
+    </div>
+    <div class="calc-button-row">
+      <div class="button">7</div>
+      <div class="button">8</div>
+      <div class="button">9</div>
+      <div class="button l">x</div>
+    </div>
+    <div class="calc-button-row">
+      <div class="button">4</div>
+      <div class="button">5</div>
+      <div class="button">6</div>
+      <div class="button l">−</div>
+    </div>
+    <div class="calc-button-row">
+      <div class="button">1</div>
+      <div class="button">2</div>
+      <div class="button">3</div>
+      <div class="button l">+</div>
+    </div>
+    <div class="calc-button-row">
+      <div class="button">.</div>
+      <div class="button">0</div>
+      <div class="button">
+        </div>
+          <div class="button l">=</div>
+      </div>
+    </div>
+  </div>
 
-         <p><input type="button" class="button black" value="0" onclick='v("0")'>
-          <input type="button" class="button black" value="." onclick='v(".")'>
-          <input type="button" class="button black" value="C" onclick='c("")'>
-          <input type="button" class="button orange" value="=" onclick='e()'>
-        </p>  
-        
-  </div>  
-</div> 
-
+<br>
+<br>
+<br>
 
 
 <!-- Ending of Main content -->
