making the whole site responsive, body and footer.

--- a/calculator.html
+++ b/calculator.html
@@ -2,7 +2,7 @@
 
 <html lang="en"></html>
 
-<head
+<head>
     <meta charset="utf-8">
 
     <link rel="stylesheet" type="text/css" href="style.css">
@@ -56,7 +56,7 @@
     <div class="calc-screen">
 
       <div class="calc-operation">Web Calculator</div>
-    <div class="calc-display"><input type="text" readonly size="18" id="d"></div>
+    <div ><input type="text" class="text-input" readonly size="18" id="d"></div>
   </div>
 
     <div class="calc-button-row">
@@ -86,9 +86,8 @@
     <div class="calc-button-row">
       <div class="button">.</div>
       <div class="button">0</div>
-      <div class="button">
-        </div>
-          <div class="button l">=</div>
+      <div class="button">Del</div>
+      <div class="button l">=</div>
       </div>
     </div>
   </div>
@@ -168,6 +167,13 @@
 </div>
 </footer>
 
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.slim.js" integrity="sha512-HNbo1d4BaJjXh+/e6q4enTyezg5wiXvY3p/9Vzb20NIvkJghZxhzaXeffbdJuuZSxFhJP87ORPadwmU9aN3wSA==" crossorigin="anonymous"></script>
+
+<!-- click action -->
+<script src="script.js">
+
+</script>
 </body>
 </html>
 
