--- a/index.html
+++ b/index.html
@@ -32,14 +32,14 @@
 
 <div class="logo">
 
-  <a href="home.html"><img src="logo.jpg"/></a>
+  <a href="index.html"><img src="logo.jpg"/></a>
 
 </div>
 
 <i class="fa fa-bars menu-toggle"></i>
 
 <ul class="nav">
-      <li><a href="home.html">Home</a></li>
+      <li><a href="index.html">Home</a></li>
       <li><a href="single.html">Single Post</a></li>
       <li>
         <a href="#">Other Applications
